--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,11 @@
         <artifactId>liquibase-core</artifactId>
     </dependency> <dependency>
         <groupId>org.springframework</groupId> <artifactId>spring-orm</artifactId> </dependency>
-
+        <dependency>
+            <groupId>net.sourceforge.dynamicreports</groupId>
+            <artifactId>dynamicreports-core</artifactId>
+            <version>6.12.1</version>
+        </dependency>
     </dependencies>
 
     <build>
